deployment/charts/network-policy/eric-app-mgr-eai-k6-policy.yaml
#  -------------------------------------------------------------------------------
#  *******************************************************************************
#  * COPYRIGHT Ericsson 2021
#  *
#  * The copyright to the computer program(s) herein is the property of
#  * Ericsson Inc. The programs may be used and/or copied only with written
#  * permission from Ericsson Inc. or in accordance with the terms and
#  * conditions stipulated in the agreement/contract under which the
#  * program(s) have been supplied.
#  *******************************************************************************
#  *------------------------------------------------------------------------------
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: eric-app-mgr-eai-k6-policy
spec:
  podSelector:
    matchLabels:
      app: eai
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: app-mgr-k6
